# AIExerices

./: README.md
SHealth_BMI_Init/: .gitignore  CMakeLists.txt  README.md  main.cpp  run_coverage.bat
SHealth_BMI_Init/ApprovalTest/: SHealthApprovalTests.cpp
SHealth_BMI_Init/ApprovalTest/approvals/: SHealthApprovalTests.AllZeroWeightsApproval.approved.txt  SHealthApprovalTests.BoundaryClassificationApproval.approved.txt  SHealthApprovalTests.CalculateBmiApproval.approved.txt  SHealthApprovalTests.EmptyAgeGroupApproval.approved.txt  SHealthApprovalTests.ExactBoundaryValuesApproval.approved.txt  SHealthApprovalTests.InvalidDataHandlingApproval.approved.txt  SHealthApprovalTests.MissingWeightImputationApproval.approved.txt  SHealthApprovalTests.MultiAgeDistributionApproval.approved.txt
SHealth_BMI_Init/chat/: cursor_approvaltest.md  cursor_approvaltest에 테스트 추가.md  cursor_codeCorverage.md  cursor_unitTest추가.md  cursor_리팩토링1.md  cursor_리팩토링2.md  cursor_프로젝트구조.md
SHealth_BMI_Init/coverage/: coverage.html  coverage.src_SHealth.cpp.html  coverage.src_SHealth.h.html  coverage.src_main.cpp.html  coverage.txt  coverage.xml
SHealth_BMI_Init/src/: SHealth.cpp  SHealth.h  main.cpp
SHealth_BMI_Init/test/: SHealthTest.cpp
unit_converter_cpp/: .gitignore  CMakeLists.txt  run_coverage.bat
unit_converter_cpp/coverage/: coverage.functions.html  coverage.html  coverage.xml
unit_converter_cpp/doc/: README.md  cursor_main.md  cursor_ocp.md  cursor_src_tests.md  cursor_구현1.md  cursor_정리.md  envirenments.txt
unit_converter_cpp/src/: CMakeLists.txt  config_loader.cpp  config_loader.h  converter.cpp  converter.h  unit.json  unit_converter.cpp
unit_converter_cpp/test/: CMakeLists.txt  test_conversion.cpp  test_quality.cpp
